--- a/vim-qt.desktop
+++ b/vim-qt.desktop
@@ -6,6 +6,7 @@ Comment=Qt UI written in Qt similar to its GTK counterpart gvim
 Icon=vim-qt
 Categories=Utility;
 TryExec=qvim
-Exec=qvim
+Exec=qvim -f %F
 Terminal=false
 StartupNotify=false
+MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;
