--- a/app_old.ini
+++ b/app_old.ini
@@ -15,6 +15,8 @@ SCRIPT_TYPE = bash
 ANSI_CHARSET = 
 ; Force every new repository to be private
 FORCE_PRIVATE = false
+; Global maximum creation limit of repository per user, -1 means no limit
+MAX_CREATION_LIMIT = -1
 ; Patch test queue length, make it as large as possible
 PULL_REQUEST_QUEUE_LENGTH = 10000
 
@@ -46,6 +48,10 @@ DOMAIN = localhost
 ROOT_URL = %(PROTOCOL)s://%(DOMAIN)s:%(HTTP_PORT)s/
 HTTP_ADDR =
 HTTP_PORT = 3000
+; Local (DMZ) URL for Gogs workers (such as SSH update) accessing web service.
+; In most cases you do not need to change the default value.
+; Alter it only if your SSH server node is not the same as HTTP node.
+LOCAL_ROOT_URL = http://localhost:%(HTTP_PORT)s/
 ; Disable SSH feature when not available
 DISABLE_SSH = false
 ; Whether use builtin SSH server or not.
@@ -265,8 +271,8 @@ ADDR =
 ; For "smtp" mode only
 [log.smtp]
 LEVEL =
-; Name displayed in mail title, default is "Diagnostic message from serve"
-SUBJECT = Diagnostic message from serve
+; Name displayed in mail title, default is "Diagnostic message from server"
+SUBJECT = Diagnostic message from server
 ; Mail server
 HOST =
 ; Mailer user name and password
@@ -296,7 +302,8 @@ SCHEDULE = @every 1h
 ; Repository health check
 [cron.repo_health_check]
 SCHEDULE = @every 24h
-; Arguments for command 'git fsck', e.g.: "--unreachable --tags"
+TIMEOUT = 60s
+; Arguments for command 'git fsck', e.g. "--unreachable --tags"
 ; see more on http://git-scm.com/docs/git-fsck/1.7.5
 ARGS = 
 
@@ -307,7 +314,7 @@ SCHEDULE = @every 24h
 
 [git]
 MAX_GIT_DIFF_LINES = 10000
-; Arguments for command 'git gc', e.g.: "--aggressive --auto"
+; Arguments for command 'git gc', e.g. "--aggressive --auto"
 ; see more on http://git-scm.com/docs/git-gc/1.7.5
 GC_ARGS = 
 
