--- a/pulledpork.conf
+++ b/pulledpork.conf
@@ -21,10 +21,13 @@
 #rule_url=https://s3.amazonaws.com/snort-org/www/rules/community/|community-rules.tar.gz|Community
 # NEW For IP Blacklisting! Note the format is urltofile|IPBLACKLIST|<oinkcode>
 # This format MUST be followed to let pulledpork know that this is a blacklist
-#rule_url=http://labs.snort.org/feeds/ip-filter.blf|IPBLACKLIST|open
+#rule_url=http://talosintel.com/files/additional_resources/ips_blacklist/ip-filter.blf|IPBLACKLIST|open
 # URL for rule documentation! (slow to process)
 #rule_url=https://www.snort.org/reg-rules/|opensource.gz|<oinkcode>
 rule_url=https://rules.emergingthreatspro.com/|emerging.rules.tar.gz|open
+# THE FOLLOWING URL is for emergingthreats downloads, note the tarball name change!
+# and open-nogpl, to avoid conflicts.
+#rule_url=https://rules.emergingthreats.net/|emerging.rules.tar.gz|open-nogpl
 # THE FOLLOWING URL is for etpro downloads, note the tarball name change!
 # and the et oinkcode requirement!
 #rule_url=https://rules.emergingthreatspro.com/|etpro.rules.tar.gz|<et oinkcode>
@@ -121,12 +124,12 @@ config_path=/etc/snort/snort.conf
 
 # Define your distro, this is for the precompiled shared object libs!
 # Valid Distro Types:
-# Debian-5-0, Debian-6-0,
-# Ubuntu-8.04, Ubuntu-10-4
-# Centos-4-8, Centos-5-4
+# Debian-6-0, Ubuntu-10-4
+# Ubuntu-12-04, Centos-5-4
 # FC-12, FC-14, RHEL-5-5, RHEL-6-0
-# FreeBSD-7-3, FreeBSD-8-1
-# OpenBSD-4-8
+# FreeBSD-8-1, FreeBSD-9-0, FreeBSD-10-0
+# OpenBSD-5-2, OpenBSD-5-3
+# OpenSUSE-11-4, OpenSUSE-12-1
 # Slackware-13-1
 #distro=FreeBSD-8.1
 
@@ -206,4 +209,4 @@ modifysid=/etc/pulledpork/modifysid.conf
 ####### need to process so_rules, simply comment out the so_rule section
 ####### you can also specify -T at runtime to process only GID 1 rules.
 
-version=0.7.0
+version=0.7.2
