--- a/c-icap.conf
+++ b/c-icap.conf
@@ -102,6 +102,27 @@ ThreadsPerChild     10
 #	MaxRequestsPerChild  0
 MaxRequestsPerChild  0
 
+# TAG: InterProcessSharedMemScheme
+# Format: InterProcessSharedMemScheme posix | mmap | sysv
+# Description:
+#	The interprocess shared mem scheme to use. Available schemes:
+#	posix Use posix shared memory (shm_open interface)
+#	mmap  Use anonymous mmaped files as shared memory
+#	sysv  use the sysv ipc shared memory
+# Default:
+#	InterProcessSharedMemScheme posix
+
+# TAG: InterProcessLockingScheme
+# Format: InterProcessSharedMemScheme file | sysv | posix
+# Description:
+#	The interprocess locking scheme to use. Available schemes:
+#       file  Use lock file
+#       sysv  Use the sysv ipc semaphores
+#	posix Use posix semaphores: Use it with caution you may experienced
+#             locking problems if one or more processes crashed.
+# Default:
+#	InterProcessLockingScheme file
+
 # TAG: Port
 # Format: Port port
 # Description:
@@ -174,6 +195,31 @@ MaxMemObject 131072
 # Default:
 #	DebugLevel 1
 DebugLevel 0
+
+# TAG: Pipelining
+# Format: Pipelining on|off
+# Description:
+#	Enable or disable ICAP requests pipelining
+# Default:
+#	Pipelining on
+Pipelining on
+
+# TAG: SupportBuggyClients
+# FORMAT: SupportBuggyClients on|off
+# Description:
+#	Try to handle requests from buggy clients, for example ICAP requests
+#	missing "\r\n" sequences
+# Default:
+# SupportBuggyClients off
+SupportBuggyClients off
+
+# TAG: Allow204As200okZeroEncaps
+# Format: Allow204As200okZeroEncaps
+# Description:
+#	When used the c-icap instead of allow 204 return "200 OK" responses
+#	with zero encapsulated entities.
+# Default:
+#	No set
 
 # TAG: ModulesDir
 # Format: ModulesDir dir
@@ -331,16 +377,16 @@ RemoteProxyUserHeaderEncoded on
 #		     The c-icap server ip address
 #		acl aclname icap_header{HeaderName} value1 ...
 #		     Matches the icap header HeaderName with value1 ...
-#		     The values are in regex form: /avalue/
+#		     The values are in regex form: /avalue/flags
 #		acl aclname icap_resp_header{HeaderName} value1 ...
 #		     The icap response header
-#		     The values are in regex form: /avalue/
+#		     The values are in regex form: /avalue/flags
 #		acl aclname http_req_header{HeaderName} value1 ...
 #		     The http request header
-#		     The values are in regex form: /avalue/
+#		     The values are in regex form: /avalue/flags
 #		acl aclname http_resp_header{HeaderName} value1 ...
 #		     The http response header
-#		     The values are in regex form: /avalue/
+#		     The values are in regex form: /avalue/flags
 #		acl aclname data_type type1 ...
 #		     The data type as recognized by the internal data type
 #		     recognizer. The types are defined in c-icap.magic file
@@ -349,6 +395,25 @@ RemoteProxyUserHeaderEncoded on
 #		     all users.
 #		acl aclname group group1 ...
 #		     if the user of request belongs to given groups
+#		acl content_length{>|<|=} value1 ...
+#		     The content length of body data if the related information
+#		     included in http headers.
+#		     The parameter can take the value <, > or = to specify that
+#		     the acl will match if content length is less, greater or
+#		     equal to acl values.
+#		acl time value1 ....
+#		     It checks agains current time. The values format is:
+#		     [DAY[,DAY,[..]]][/][HH:MM-HH:MM]
+#		     The DAY can be one of the following:
+#			S - Sunday
+#			M - Monday
+#			T - Tuesday
+#			W - Wednesday
+#			H - Thursday
+#			F - Friday
+#			A - Saturday
+#		acl http_client_ip ip1[/netmask1] ...
+#		     The HTTP client ip address, if it is available.
 # Default:
 #	None set
 # Examples:
@@ -361,6 +426,9 @@ RemoteProxyUserHeaderEncoded on
 #	acl localnet src 192.168.1.0/255.255.255.0
 #	acl localhost src 127.0.0.1/255.255.255.255
 #	acl all src 0.0.0.0/0.0.0.0
+#	acl BigObjects content_length{>} 5000000
+#	acl WorkingHours time M,T,W,H,F/8:00-18:00
+#	acl FreeHour time Sunday,Saturday/8:00-23:59 M,T,W,H,F/18:01-23:59 M,T,W,H,F/0:00-7.59
 
 # TAG: icap_access
 # Format: icap_access allow|deny [!]acl1 ...
@@ -619,7 +687,15 @@ Service echo srv_echo.so
 # Description:
 #	Add support for dns lookup tables. Can be used to access
 #	dns block lists. The dnsbl lookup table path definition is:
-#	    dnsbl:domainname
+#	    dnsbl:domainname[{param1=val, ...}]
+#       dnsbl table parameters can be one or more of the followings:
+#            cache=no|cache_type
+#               The cache type to use or 'no' for no cache.
+#            cache-size=Size[K|M]
+#               The cache size in RAM
+#            cache-ttl=ttl
+#               The cache ttl to use
+#	
 #	For example the lookup table  for accessing the black.uribl.com
 #	dns black list is: 
 #	    dnsbl:black.uribl.com
@@ -632,11 +708,23 @@ Service echo srv_echo.so
 # Description:
 #	Add LDAP support to c-icap. The user can use LDAP based lookup tables
 #	using the following lookup table path:
-#	      ldap://[username:password@]ldapserver?base?attr1,attr2?filter[{[cache=no]}]
+#	      ldap://[username:password@]ldapserver?base?attr1,attr2?filter[{[param=value, ...]}]
 #	The filter can contain the "%s" formating code which will be replaced by
-#	the search key
+#	the search key.
+#	ldap table parameters can be one or more of the followings:
+#	     name=aName
+#		A unique name to use for this table
+#	     cache=no|cache_type
+#		The cache type to use or no for no cache.
+#	     cache-size=Size[K|M]
+#		The cache size in RAM
+#	     cache-ttl=ttl
+#		The cache ttl to use
+#	     cache-item-size=ItemSize[K|M]
+#		The maximum item size
+#	
 #	Examples of supported ldap urls:
-#	     ldap://ldap.chtsanti.net?o=chtsanti?cn,uid?uid=%s
+#	     ldap://ldap.chtsanti.net?o=chtsanti?cn,uid?uid=%s{cache=memcached}
 #	     ldap://cn=Directory Manager:Apassword@ldap.chtsanti.net?o=chtsanti?mermberUid?(&(objectClass=posixGroup)(cn=%s))
 #	
 #	WARNING: is not enough tested it may contain bugs!
@@ -644,6 +732,29 @@ Service echo srv_echo.so
 #	Module common ldap_module.so
 
 # End module: ldap_module
+
+# Module: memcached
+# Description:
+#       Add support for memcached c-icap cache.
+# Example:
+#       Module common memcached.so
+
+# TAG: memcached.servers
+# Format: memcached.servers hostname1 hostname2 ...
+# Description:
+#	Set the memcached servers to use
+# Default:
+#	memcached.servers 127.0.0.1
+
+# TAG: memcached.use_md5_keys
+# Format: memcached.use_md5_keys on|off
+# Description:
+#	Whether to use or not md5 hash as key when the key exceeds the
+#	MEMCACHED_MAX_KEY (normaly 251 bytes)
+# Default:
+#	memcached.use_md5_keys on
+
+# End module: memcached
 
 #Include virus_scan.conf
 #Service squidclamav squidclamav.so
