--- a/snort.conf
+++ b/snort.conf
@@ -10,7 +10,7 @@
 #     Snort bugs:                bugs@snort.org
 #
 #     Compatible with Snort Versions:
-#     VERSIONS : 2.9.6.1
+#     VERSIONS : 2.9.8
 #
 #     Snort build options:
 #     OPTIONS : --enable-gre --enable-mpls --enable-targetbased --enable-ppm --enable-perfprofiling --enable-zlib --enable-active-response --enable-normalizer --enable-reload --enable-react --enable-flexresp3
@@ -73,7 +73,7 @@ ipvar FTP_SERVERS $HOME_NET
 ipvar SIP_SERVERS $HOME_NET
 
 # List of ports you run web servers on
-portvar HTTP_PORTS [36,80,81,82,83,84,85,86,87,88,89,90,311,383,555,591,593,631,801,808,818,901,972,1158,1220,1414,1533,1741,1830,2231,2301,2381,2809,3029,3037,3057,3128,3443,3702,4000,4343,4848,5117,5250,6080,6173,6988,7000,7001,7071,7144,7145,7510,7770,7777,7779,8000,8008,8014,8028,8080,8081,8082,8085,8088,8090,8118,8123,8180,8181,8222,8243,8280,8300,8500,8509,8800,8888,8899,9000,9060,9080,9090,9091,9111,9443,9999,10000,11371,12601,15489,29991,33300,34412,34443,34444,41080,44449,50000,50002,51423,53331,55252,55555,56712] 
+portvar HTTP_PORTS [80,81,311,383,591,593,901,1220,1414,1741,1830,2301,2381,2809,3037,3128,3702,4343,4848,5250,6988,7000,7001,7144,7145,7510,7777,7779,8000,8008,8014,8028,8080,8085,8088,8090,8118,8123,8180,8181,8243,8280,8300,8800,8888,8899,9000,9060,9080,9090,9091,9443,9999,11371,34443,34444,41080,50002,55555]
 
 # List of ports you want to look for SHELLCODE on.
 portvar SHELLCODE_PORTS !80
@@ -107,6 +107,10 @@ var SO_RULE_PATH ../so_rules
 var PREPROC_RULE_PATH ../preproc_rules
 
 # If you are using reputation preprocessor set these
+# Currently there is a bug with relative paths, they are relative to where snort is
+# not relative to snort.conf like the above variables
+# This is completely inconsistent with how other vars work, BUG 89986
+# Set the absolute path appropriately
 var WHITE_LIST_PATH ../rules
 var BLACK_LIST_PATH ../rules
 
@@ -281,14 +285,15 @@ preprocessor stream5_global: track_tcp yes, \
    max_udp 131072, \
    max_active_responses 2, \
    min_response_seconds 5
-preprocessor stream5_tcp: policy windows, detect_anomalies, require_3whs 180, \
+preprocessor stream5_tcp: log_asymmetric_traffic no, policy windows, \
+   detect_anomalies, require_3whs 180, \
    overlap_limit 10, small_segments 3 bytes 150, timeout 180, \
-    ports client 21 22 23 25 42 53 70 79 109 110 111 113 119 135 136 137 139 143 \
+    ports client 21 22 23 25 42 53 79 109 110 111 113 119 135 136 137 139 143 \
         161 445 513 514 587 593 691 1433 1521 1741 2100 3306 6070 6665 6666 6667 6668 6669 \
         7000 8181 32770 32771 32772 32773 32774 32775 32776 32777 32778 32779, \
-    ports both 36 80 81 82 83 84 85 86 87 88 89 90 110 311 383 443 465 563 555 591 593 631 636 801 808 818 901 972 989 992 993 994 995 1158 1220 1414 1533 1741 1830 2231 2301 2381 2809 3029 3037 3057 3128 3443 3702 4000 4343 4848 5117 5250 6080 6173 6988 7907 7000 7001 7071 7144 7145 7510 7802 7770 7777 7779 \
+    ports both 80 81 311 383 443 465 563 591 593 636 901 989 992 993 994 995 1220 1414 1830 2301 2381 2809 3037 3128 3702 4343 4848 5250 6988 7907 7000 7001 7144 7145 7510 7802 7777 7779 \
         7801 7900 7901 7902 7903 7904 7905 7906 7908 7909 7910 7911 7912 7913 7914 7915 7916 \
-        7917 7918 7919 7920 8000 8008 8014 8028 8080 8081 8082 8085 8088 8090 8118 8123 8180 8181 8222 8243 8280 8300 8500 8509 8800 8888 8899 9000 9060 9080 9090 9091 9111 9443 9999 10000 11371 12601 15489 29991 33300 34412 34443 34444 41080 44449 50000 50002 51423 53331 55252 55555 56712
+        7917 7918 7919 7920 8000 8008 8014 8028 8080 8085 8088 8090 8118 8123 8180 8243 8280 8300 8800 8888 8899 9000 9060 9080 9090 9091 9443 9999 11371 34443 34444 41080 50002 55555
 preprocessor stream5_udp: timeout 180
 
 # performance statistics.  For more information, see the Snort Manual, Configuring Snort - Preprocessors - Performance Monitor
@@ -307,7 +312,7 @@ preprocessor http_inspect_server: server default \
     max_headers 100 \
     max_spaces 200 \
     small_chunk_length { 10 5 } \
-    ports { 36 80 81 82 83 84 85 86 87 88 89 90 311 383 555 591 593 631 801 808 818 901 972 1158 1220 1414 1741 1830 2231 2301 2381 2809 3029 3037 3057 3128 3443 3702 4000 4343 4848 5117 5250 6080 6173 6988 7000 7001 7071 7144 7145 7510 7770 7777 7779 8000 8008 8014 8028 8080 8081 8082 8085 8088 8090 8118 8123 8180 8181 8222 8243 8280 8300 8500 8509 8800 8888 8899 9000 9060 9080 9090 9091 9111 9443 9999 10000 11371 12601 15489 29991 33300 34412 34443 34444 41080 44449 50000 50002 51423 53331 55252 55555 56712 } \
+    ports { 80 81 311 383 591 593 901 1220 1414 1741 1830 2301 2381 2809 3037 3128 3702 4343 4848 5250 6988 7000 7001 7144 7145 7510 7777 7779 8000 8008 8014 8028 8080 8085 8088 8090 8118 8123 8180 8181 8243 8280 8300 8800 8888 8899 9000 9060 9080 9090 9091 9443 9999 11371 34443 34444 41080 50002 55555 } \
     non_rfc_char { 0x00 0x01 0x02 0x03 0x04 0x05 0x06 0x07 } \
     enable_cookie \
     extended_response_inspection \
@@ -581,7 +586,6 @@ include $RULE_PATH/local.rules
 #include $RULE_PATH/file-flash.rules
 #include $RULE_PATH/file-identify.rules
 #include $RULE_PATH/file-image.rules
-#include $RULE_PATH/file-java.rules
 #include $RULE_PATH/file-multimedia.rules
 #include $RULE_PATH/file-office.rules
 #include $RULE_PATH/file-other.rules
@@ -593,7 +597,6 @@ include $RULE_PATH/local.rules
 #include $RULE_PATH/imap.rules
 #include $RULE_PATH/indicator-compromise.rules
 #include $RULE_PATH/indicator-obfuscation.rules
-#include $RULE_PATH/indicator-scan.rules
 #include $RULE_PATH/indicator-shellcode.rules
 #include $RULE_PATH/info.rules
 #include $RULE_PATH/malware-backdoor.rules
@@ -607,7 +610,6 @@ include $RULE_PATH/local.rules
 #include $RULE_PATH/nntp.rules
 #include $RULE_PATH/oracle.rules
 #include $RULE_PATH/os-linux.rules
-#include $RULE_PATH/os-mobile.rules
 #include $RULE_PATH/os-other.rules
 #include $RULE_PATH/os-solaris.rules
 #include $RULE_PATH/os-windows.rules
@@ -621,19 +623,12 @@ include $RULE_PATH/local.rules
 #include $RULE_PATH/policy-spam.rules
 #include $RULE_PATH/pop2.rules
 #include $RULE_PATH/pop3.rules
-#include $RULE_PATH/protocol-dns.rules
 #include $RULE_PATH/protocol-finger.rules
 #include $RULE_PATH/protocol-ftp.rules
 #include $RULE_PATH/protocol-icmp.rules
 #include $RULE_PATH/protocol-imap.rules
-#include $RULE_PATH/protocol-nntp.rules
 #include $RULE_PATH/protocol-pop.rules
-#include $RULE_PATH/protocol-rpc.rules
-#include $RULE_PATH/protocol-scada.rules
 #include $RULE_PATH/protocol-services.rules
-#include $RULE_PATH/protocol-snmp.rules
-#include $RULE_PATH/protocol-telnet.rules
-#include $RULE_PATH/protocol-tftp.rules
 #include $RULE_PATH/protocol-voip.rules
 #include $RULE_PATH/pua-adware.rules
 #include $RULE_PATH/pua-other.rules
@@ -650,7 +645,6 @@ include $RULE_PATH/local.rules
 #include $RULE_PATH/server-mysql.rules
 #include $RULE_PATH/server-oracle.rules
 #include $RULE_PATH/server-other.rules
-#include $RULE_PATH/server-samba.rules
 #include $RULE_PATH/server-webapp.rules
 #include $RULE_PATH/shellcode.rules
 #include $RULE_PATH/smtp.rules
