--- a/atieventsd.service
+++ b/atieventsd.service
@@ -1,9 +1,9 @@
 [Unit]
 Description=Catalyst event Daemon
-Requires=acpid.socket
+Requires=acpid.service
 
 [Service]
-ExecStart=/usr/sbin/atieventsd --nodaemon
+ExecStart=/usr/bin/atieventsd --nodaemon
 
 [Install]
 WantedBy=multi-user.target
