--- a/navy.rc
+++ b/navy.rc
@@ -2,7 +2,7 @@
 
 # General
 FOREGROUND="#cc4c00"
-BACKGROUND="#2a0308"
+BACKGROUND="#000077"
 WALLPAPER="/etc/xdm-xfreq/theme/wallpaper.jpg"
 
 # Greeter
@@ -24,11 +24,11 @@ FAILFACE="DejaVuSans-9:bold:italic"
 FAILTEXT="Access denied"
 FAILTIMEOUT="10"
 
-LOGINBACKGROUND="#2a0308"
+LOGINBACKGROUND="#0000aa"
 LOGINFOREGROUND="white"
 LOGINSHDCOLOR="#404040"
 LOGINHICOLOR="#737373"
-FAILFOREGROUND="yellow"
+FAILFOREGROUND="#cccc00"
 
 # Chooser
 LABELFONT="-xos4-terminus-medium-*-*-*-14-*-*-*-*-*-*-*"
@@ -66,6 +66,6 @@ XFREQSHOWCPI="0"
 XFREQSHOWRATIO="1"
 XFREQSHOWCSTATE="0"
 XFREQWALLBOARD="1"
-XFREQFOREGROUND="0x994c00"
-XFREQBACKGROUND="0x2a0308"
+XFREQFOREGROUND="0xcccc00"
+XFREQBACKGROUND="0x000077"
 XFREQGEOMETRY="0:0x0+24-48,1:0x0-24+16,2:0x0+24+16,3:0x0+540+16,4:0x0-24-48,5:0x0+540-48"
