--- a/xdm-xfreq.rc
+++ b/xdm-xfreq.rc
@@ -18,7 +18,7 @@ XDM_XFREQ_BG_COLOR_PATH=xsetroot
 XDM_XFREQ_BG_COLOR_ARGS="-solid $BACKGROUND"
 
 # Background picture
-if [[ -v WALLPAPER ]]; then
+if [[ -v WALLPAPER && -e $WALLPAPER ]]; then
 	XDM_XFREQ_BG_WALLPAPER_PATH=display
 	XDM_XFREQ_BG_WALLPAPER_ARGS="-backdrop -window root $WALLPAPER"
 fi
@@ -56,7 +56,7 @@ XDM_XFREQ_SCREENSAVER[5]=1500
 
 # XFreq
 XDM_XFREQ_GUI_PATH=xfreq-gui
-XDM_XFREQ_GUI_ARGS="-D 0 -f $XFREQFOREGROUND -b $XFREQBACKGROUND -l 1 -w 1 -n 1 -N 1 -I 0x1000 -U 0x21 -g 0:0x0+24-48,1:0x0-24+16,2:0x0+24+16,3:0x0+540+16,4:0x0-24-48,5:0x0+540-48"
+XDM_XFREQ_GUI_ARGS="-D 0 -f $XFREQFOREGROUND -b $XFREQBACKGROUND -l $XFREQFILLGFX -z $XFREQSHOWFREQ -y $XFREQSHOWCYCLES -j $XFREQSHOWIPS -J $XFREQSHOWIPC -i $XFREQSHOWCPI -r $XFREQSHOWRATIO -p $XFREQSHOWCSTATE -w $XFREQWALLBOARD -n 1 -N 1 -I 0x1000 -U 0x21 -F $XFREQFONT -g $XFREQGEOMETRY"
 XDM_XFREQ_GUI_PID=/var/run/xdm-xfreq-gui.pid
 
 # PowerOff
@@ -76,3 +76,4 @@ XDM_XFREQ_RESCUE_CMD="systemctl rescue"
 
 # Users settings
 XSESSION_ERR_PATH="$HOME/.xsession-errors"
+XSESSION_LAST_NUM=1
