Navy theme updated.

--- a/navy.rc
+++ b/navy.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # General
-FOREGROUND="#cc4c00"
+FOREGROUND="cyan"
 BACKGROUND="#000077"
 WALLPAPER="/etc/xdm-xfreq/theme/wallpaper.jpg"
 
@@ -9,7 +9,7 @@ WALLPAPER="/etc/xdm-xfreq/theme/wallpaper.jpg"
 GREETFONT="-xos4-terminus-*-*-*-*-12-*-*-*-*-*-*-*"
 GREETFACE="DejaVuSans-8"
 
-GREETFOREGROUND="#cc4c00"
+GREETFOREGROUND="cyan"
 
 
 # Login
@@ -24,11 +24,11 @@ FAILFACE="DejaVuSans-9:bold:italic"
 FAILTEXT="Access denied"
 FAILTIMEOUT="10"
 
-LOGINBACKGROUND="#0000aa"
+LOGINBACKGROUND="#000088"
 LOGINFOREGROUND="white"
 LOGINSHDCOLOR="#404040"
 LOGINHICOLOR="#737373"
-FAILFOREGROUND="#cccc00"
+FAILFOREGROUND="white"
 
 # Chooser
 LABELFONT="-xos4-terminus-medium-*-*-*-14-*-*-*-*-*-*-*"
@@ -43,20 +43,20 @@ LOGOPADDING="0"
 # Menu
 MENUFONT="-xos4-terminus-medium-*-*-*-14-*-*-*-*-*-*-*"
 MENUFACE="DejaVuSans-9"
-MENUGEOMETRY="$(( $WIDTH - 256 ))x32+0-0"
+MENUGEOMETRY="$(( $WIDTH - 96 ))x32+0+0"
 
 # Clock
-CLOCKFACE="DejaVuSans-10"
-CLOCKFORMAT="%a %e %b %H:%M:%S"
+CLOCKFACE="DejaVuSans-10:italic"
+CLOCKFORMAT="%H:%M:%S"
 CLOCKUPDATE="1"
-CLOCKGEOMETRY="256x32-0-0"
+CLOCKGEOMETRY="96x32-0+0"
 
 # Notification
 NOTIFYTIMEOUT="15"
-NOTIFYGEOMETRY="+24-64"
+NOTIFYGEOMETRY="+24+64"
 
 # XFreq
-XFREQFONT="Fixed"
+XFREQFONT="-xos4-terminus-medium-*-*-*-14-*-*-*-*-*-*-*"
 XFREQFILLGFX="1"
 XFREQSHOWFREQ="1"
 XFREQSHOWCYCLES="0"
@@ -66,6 +66,6 @@ XFREQSHOWCPI="0"
 XFREQSHOWRATIO="1"
 XFREQSHOWCSTATE="0"
 XFREQWALLBOARD="1"
-XFREQFOREGROUND="0xcccc00"
-XFREQBACKGROUND="0x000077"
-XFREQGEOMETRY="0:0x0+24-48,1:0x0-24+16,2:0x0+24+16,3:0x0+540+16,4:0x0-24-48,5:0x0+540-48"
+XFREQFOREGROUND="0x737373"
+XFREQBACKGROUND="0x000088"
+XFREQGEOMETRY="0:0x0+24+48,1:0x0-24+48,2:0x0+24-16,3:0x0+672-16,4:0x0-24-16,5:0x0+672+48"
