--- a/makefile.patch
+++ b/makefile.patch
@@ -1,5 +1,5 @@
---- Makefile.orig	2015-12-12 12:31:26.850930000 +0100
-+++ Makefile	2015-12-12 12:33:25.507572377 +0100
+--- Makefile.orig	2015-12-14 13:43:24.760324000 +0100
++++ Makefile	2015-12-14 13:47:51.211541498 +0100
 @@ -10,7 +10,7 @@
  TARGET = jumpnbump
  BINARIES = $(TARGET) jumpnbump.svgalib jumpnbump.fbcon $(MODIFY_TARGET) \
@@ -9,32 +9,24 @@
  
  .PHONY: data
  
-@@ -43,18 +43,18 @@
+@@ -43,16 +43,16 @@
  	rm -f $(TARGET) *.o globals.h jnbmenu.tcl
  
  install:
 -	mkdir -p $(PREFIX)/games/
--	mkdir -p $(PREFIX)/share/jumpnbump/
--	mkdir -p $(PREFIX)/share/man/man6/
++	mkdir -p $(PREFIX)/bin/
+ 	mkdir -p $(PREFIX)/share/jumpnbump/
+ 	mkdir -p $(PREFIX)/share/man/man6/
 -	install -o root -g games -m 755 $(BINARIES) $(PREFIX)/games/
 -	install -o root -g games -m 644 data/jumpbump.dat \
--	$(PREFIX)/share/jumpnbump/jumpbump.dat
--	install -o root -g root -m 644 jumpnbump.6 $(PREFIX)/share/man/man6/
-+	mkdir -p $(PREFIX)/usr/bin/
-+	mkdir -p $(PREFIX)/usr/share/jumpnbump/
-+	mkdir -p $(PREFIX)/usr/share/man/man6/
-+	install -o root -g root -m 755 $(BINARIES) $(PREFIX)/usr/bin/
++	install -o root -g root -m 755 $(BINARIES) $(PREFIX)/bin/
 +	install -o root -g root -m 644 data/jumpbump.dat \
-+	$(PREFIX)/usr/share/jumpnbump/jumpbump.dat
-+	install -o root -g root -m 644 jumpnbump.6 $(PREFIX)/usr/share/man/man6/
+ 	$(PREFIX)/share/jumpnbump/jumpbump.dat
+ 	install -o root -g root -m 644 jumpnbump.6 $(PREFIX)/share/man/man6/
  
  uninstall:
 -	cd $(PREFIX)/games && rm -f $(BINARIES)
--	rm -rf $(PREFIX)/share/jumpnbump
--	rm -f $(PREFIX)/share/man/man6/jumpnbump.6
-+	cd $(PREFIX)/usr/bin/ && rm -f $(BINARIES)
-+	rm -rf $(PREFIX)/usr/share/jumpnbump
-+	rm -f $(PREFIX)/usr/share/man/man6/jumpnbump.6
++	cd $(PREFIX)/bin/ && rm -f $(BINARIES)
+ 	rm -rf $(PREFIX)/share/jumpnbump
+ 	rm -f $(PREFIX)/share/man/man6/jumpnbump.6
  
- doc:
- 	rman jumpnbump.6 -f HTML >jumpnbump.html
