Auto-generation of Twm resources.

--- a/chocolate.rc
+++ b/chocolate.rc
@@ -24,7 +24,7 @@ FAILFACE="DejaVuSans-9:bold:italic"
 FAILTEXT="Access denied"
 FAILTIMEOUT="10"
 
-LOGINBACKGROUND="#2a0308"
+LOGINBACKGROUND=$BACKGROUND
 LOGINFOREGROUND="white"
 LOGINSHDCOLOR="#404040"
 LOGINHICOLOR="#737373"
@@ -69,3 +69,45 @@ XFREQWALLBOARD="1"
 XFREQFOREGROUND="0x994c00"
 XFREQBACKGROUND="0x2a0308"
 XFREQGEOMETRY="0:0x0+24-48,1:0x0-24+16,2:0x0+24+16,3:0x0+540+16,4:0x0-24-48,5:0x0+540-48"
+
+# WM
+WMBORDERCOLOR=$BACKGROUND
+WMBORDERCLOCK=$BACKGROUND
+WMBORDERPOPUP=$BACKGROUND
+WMBORDERTASKS=$BACKGROUND
+WMBORDERTILEBG=$BACKGROUND
+WMBORDERTILEFG="chocolate"
+WMBORDERMENUBG=$BACKGROUND
+WMBORDERICON="chocolate"
+WMDEFAULTBG=$BACKGROUND
+WMDEFAULTFG="#dfdfdf"
+WMTITLEBG=$BACKGROUND
+WMTITLEFG="#dfdfdf"
+WMMENUBG=$BACKGROUND
+WMMENUFG="#dfdfdf"
+WMMENUSHADOW=$BACKGROUND
+WMMENUTITLEBG=$BACKGROUND
+WMMENUTITLEFG="#efefef"
+WMICONBG=$BACKGROUND
+WMICONFG="#dfdfdf"
+WMTASKSBG=$BACKGROUND
+WMTASKSFG="#dfdfdf"
+WMTASKSLIGHT="#efefef"
+WMRUNWINBG=$BACKGROUND
+WMRUNWINFG="white"
+WMRUNSELBG="chocolate"
+WMRUNSELFG=$WMRUNWINFG
+WMPOPUPBG=$BACKGROUND
+WMPOPUPFG="#dfdfdf"
+WMTERMBG="black"
+WMTERMFG="white"
+WMCLOCKBG=$BACKGROUND
+WMCLOCKFG="white"
+
+WMMENUFONT="-misc-fixed-*-*-*-*-15-*-*-*-*-*-*-*"
+WMTITLEFONT="-misc-fixed-*-*-*-*-14-110-*-*-*-*-*-*"
+WMICONFONT="-misc-fixed-*-*-*-*-14-110-*-*-*-*-*-*"
+WMRESIZEFONT="-misc-fixed-*-*-*-*-12-*-*-*-*-*-*-*"
+WMPOPUPFONT="-misc-fixed-*-*-*-*-15-*-*-*-*-*-*-*"
+WMTERMFONT="-misc-fixed-medium-*-*-*-18-*-*-*-*-*-*-*"
+WMCLOCKFACE="DejaVuSans-9:bold"
