Split in two packages: xdm-xfreq and twm-xfreq

--- a/chocolate.rc
+++ b/chocolate.rc
@@ -77,7 +77,7 @@ WMBORDERPOPUP=$BACKGROUND
 WMBORDERTASKS=$BACKGROUND
 WMBORDERTILEBG=$BACKGROUND
 WMBORDERTILEFG="chocolate"
-WMBORDERMENUBG=$BACKGROUND
+WMBORDERMENUBG="chocolate"
 WMBORDERICON="chocolate"
 WMDEFAULTBG=$BACKGROUND
 WMDEFAULTFG="#dfdfdf"
@@ -108,6 +108,6 @@ WMMENUFONT="-misc-fixed-*-*-*-*-15-*-*-*-*-*-*-*"
 WMTITLEFONT="-misc-fixed-*-*-*-*-14-110-*-*-*-*-*-*"
 WMICONFONT="-misc-fixed-*-*-*-*-14-110-*-*-*-*-*-*"
 WMRESIZEFONT="-misc-fixed-*-*-*-*-12-*-*-*-*-*-*-*"
-WMPOPUPFONT="-misc-fixed-*-*-*-*-15-*-*-*-*-*-*-*"
+WMPOPUPFONT="-misc-fixed-*-*-*-*-14-*-*-*-*-*-*-*"
 WMTERMFONT="-misc-fixed-medium-*-*-*-18-*-*-*-*-*-*-*"
 WMCLOCKFACE="DejaVuSans-9:bold"
