--- a/navy.rc
+++ b/navy.rc
@@ -11,7 +11,6 @@ GREETFACE="DejaVuSans-8"
 
 GREETFOREGROUND="cyan"
 
-
 # Login
 LOGINFONT="-xos4-terminus-medium-*-*-*-14-*-*-*-*-*-*-*"
 LOGINFACE="Sans-9"
@@ -69,3 +68,47 @@ XFREQWALLBOARD="1"
 XFREQFOREGROUND="0x737373"
 XFREQBACKGROUND="0x000088"
 XFREQGEOMETRY="0:0x0+24+48,1:0x0-24+48,2:0x0+24-16,3:0x0+672-16,4:0x0-24-16,5:0x0+672+48"
+
+# WM
+WMBORDERCOLOR=$BACKGROUND
+WMBORDERCLOCK=$BACKGROUND
+WMBORDERPOPUP=$BACKGROUND
+WMBORDERTASKS=$BACKGROUND
+WMBORDERTILEBG=$BACKGROUND
+WMBORDERTILEFG="cyan"
+WMBORDERMENUBG="cyan"
+WMBORDERICON="cyan"
+WMDEFAULTBG=$BACKGROUND
+WMDEFAULTFG="#dfdfdf"
+WMTITLEBG=$BACKGROUND
+WMTITLEFG="#dfdfdf"
+WMMENUBG=$BACKGROUND
+WMMENUFG="#dfdfdf"
+WMMENUSHADOW=$BACKGROUND
+WMMENUTITLEBG=$BACKGROUND
+WMMENUTITLEFG="#efefef"
+WMICONBG=$BACKGROUND
+WMICONFG="#dfdfdf"
+WMTASKSBG=$BACKGROUND
+WMTASKSFG="#dfdfdf"
+WMTASKSLIGHT="#efefef"
+WMRUNWINBG=$BACKGROUND
+WMRUNWINFG="white"
+WMRUNSELBG="cyan"
+WMRUNSELFG=$WMRUNWINFG
+WMPOPUPBG=$BACKGROUND
+WMPOPUPFG="#dfdfdf"
+WMTERMBG="black"
+WMTERMFG="white"
+WMCLOCKBG=$BACKGROUND
+WMCLOCKFG="white"
+
+WMMENUFONT="-misc-fixed-*-*-*-*-15-*-*-*-*-*-*-*"
+WMTITLEFONT="-misc-fixed-*-*-*-*-14-110-*-*-*-*-*-*"
+WMICONFONT="-misc-fixed-*-*-*-*-14-110-*-*-*-*-*-*"
+WMRESIZEFONT="-misc-fixed-*-*-*-*-12-*-*-*-*-*-*-*"
+WMPOPUPFONT="-misc-fixed-*-*-*-*-14-*-*-*-*-*-*-*"
+WMCLOCKFACE="DejaVuSans-9:bold"
+WMTERMBIGFONT="-misc-fixed-medium-*-*-*-18-*-*-*-*-*-*-*"
+WMTERMMEDFONT="-misc-fixed-medium-*-*-*-15-*-*-*-*-*-*-*"
+WMTERMSMLFONT="-misc-fixed-medium-*-*-*-12-*-*-*-*-*-*-*"
