--- a/firefox-developer.desktop
+++ b/firefox-developer.desktop
@@ -6,7 +6,7 @@ Type=Application
 Categories=Application;Network;
 MimeType=text/html
 Encoding=UTF-8
-Exec=firefox-developer %u
+Exec=firefox-developer --class=firefox-developer %u
 Terminal=false
 MultipleArgs=false
-StartupNotify=false
+StartupNotify=true
