--- a/java.conf
+++ b/java.conf
@@ -4,7 +4,10 @@ psmxer:
 	- /opt/java/bin/javac
 	- /usr/lib/jvm/java-?-openjdk/bin/javac
 	- /usr/lib/jvm/java-?-openjdk/jre/bin/java
+	- /usr/lib/jvm/java-?-jdk/bin/javac
+	- /usr/lib/jvm/java-?-jdk/jre/bin/java
 
 # MPROTECT off
 PSmXER:
 	- /usr/lib/jvm/java-?-openjdk/bin/jar
+	- /usr/lib/jvm/java-?-jdk/bin/jar
