Navy theme updated.

--- a/navy.rc
+++ b/navy.rc
@@ -76,32 +76,32 @@ WMBORDERPOPUP=$BACKGROUND
 WMBORDERTASKS=$BACKGROUND
 WMBORDERTILEBG=$BACKGROUND
 WMBORDERTILEFG="cyan"
-WMBORDERMENUBG="cyan"
-WMBORDERICON="cyan"
+WMBORDERMENUBG="#dfdfdf"
+WMBORDERICON=$BACKGROUND
 WMDEFAULTBG=$BACKGROUND
 WMDEFAULTFG="#dfdfdf"
 WMTITLEBG=$BACKGROUND
 WMTITLEFG="#dfdfdf"
-WMMENUBG=$BACKGROUND
+WMMENUBG="#000088"
 WMMENUFG="#dfdfdf"
 WMMENUSHADOW=$BACKGROUND
-WMMENUTITLEBG=$BACKGROUND
+WMMENUTITLEBG=$WMMENUBG
 WMMENUTITLEFG="#efefef"
 WMICONBG=$BACKGROUND
 WMICONFG="#dfdfdf"
 WMTASKSBG=$BACKGROUND
-WMTASKSFG="#dfdfdf"
+WMTASKSFG="cyan"
 WMTASKSLIGHT="#efefef"
 WMRUNWINBG=$BACKGROUND
-WMRUNWINFG="white"
-WMRUNSELBG="cyan"
-WMRUNSELFG=$WMRUNWINFG
+WMRUNWINFG="cyan"
+WMRUNSELBG=$WMRUNWINFG
+WMRUNSELFG=$WMRUNWINBG
 WMPOPUPBG=$BACKGROUND
-WMPOPUPFG="#dfdfdf"
+WMPOPUPFG="cyan"
 WMTERMBG="black"
-WMTERMFG="white"
+WMTERMFG="#efefef"
 WMCLOCKBG=$BACKGROUND
-WMCLOCKFG="white"
+WMCLOCKFG="cyan"
 
 WMMENUFONT="-misc-fixed-*-*-*-*-15-*-*-*-*-*-*-*"
 WMTITLEFONT="-misc-fixed-*-*-*-*-14-110-*-*-*-*-*-*"
