Fixed carbon.conf and systemd service

--- a/carbon.conf
+++ b/carbon.conf
@@ -33,7 +33,7 @@
 # Specify the user to drop privileges to
 # If this is blank carbon runs as the user that invokes it
 # This user must have write access to the local data directory
-USER = graphite
+#USER = graphite
 
 # Limit the size of the cache to avoid swapping or becoming CPU bound.
 # Sorts and serving cache queries gets more expensive as the cache grows.
