--- a/jetbrains-datagrip.desktop
+++ b/jetbrains-datagrip.desktop
@@ -2,8 +2,8 @@
 Version=1.0
 Type=Application
 Name=DataGrip
-Icon=/opt/datagrip/bin/0xdbe.png
-Exec="/opt/datagrip/bin/0xdbe.sh" %f
+Icon=/opt/datagrip/bin/product.png
+Exec="/opt/datagrip/bin/datagrip.sh" %f
 Comment=Develop with pleasure!
 Categories=Development;IDE;
 Terminal=false
