Updated to 6.2.1 + update exemple ssl vhost

--- a/example_nginx_vhost_ssl.conf
+++ b/example_nginx_vhost_ssl.conf
@@ -4,7 +4,7 @@
 server {
         listen 80;
         server_name pydio.local;
-        rewrite ^ https://$server_name$request_uri? permanent;
+        return 301 https://$server_name$request_uri? permanent;
 }
 
 server {
@@ -17,17 +17,18 @@ server {
         access_log /var/log/nginx/pydio6.access.log;
         error_log /var/log/nginx/pydio6.error.log;
 
-        client_max_body_size 20G;
+        client_max_body_size 5G;
         client_body_buffer_size 128k;
 
         ssl_certificate           /etc/ssl/pydio.local.pem;
         ssl_certificate_key       /etc/ssl/pydio.local_key.pem;
-        ssl_protocols             SSLv3 TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers               RC4:HIGH:!aNULL:!MD5;
+        ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers               'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         ssl_prefer_server_ciphers on;
-        keepalive_timeout         70;
-        ssl_session_cache         shared:SSL:10m;
-        ssl_session_timeout       10m;
+        keepalive_requests        10;
+        keepalive_timeout         60 60;
+        #ssl_session_cache         shared:SSL:10m;
+        #ssl_session_timeout       10m;
 
         location ^~ (/dashboard|/settings|/welcome|/ws-) {
             try_files /index.php =404;
