--- a/makefile.patch
+++ b/makefile.patch
@@ -1,56 +1,11 @@
-*** origMakefile	2011-03-08 19:55:26.000000000 +0100
---- Makefile	2012-05-18 19:04:04.412722880 +0200
-***************
-*** 32,44 ****
-  
-  # section to define the various symbols needed to build DRAWxtl for Linux systems
-  
-!   prefix          = /usr/local
-    includedir      = ${prefix}/include
-    libdir          = /usr/lib/
-  
-    BUILD_CPU=$(shell uname -m)
-    ifneq (,$(findstring 64,$(BUILD_CPU)))
-!       libdir	  = /usr/lib64/
-    endif
-  
-  # compiler name:
---- 32,44 ----
-  
-  # section to define the various symbols needed to build DRAWxtl for Linux systems
-  
-!   prefix          = /usr/
-    includedir      = ${prefix}/include
-    libdir          = /usr/lib/
-  
-    BUILD_CPU=$(shell uname -m)
-    ifneq (,$(findstring 64,$(BUILD_CPU)))
-!       libdir	  = /usr/lib/
-    endif
-  
-  # compiler name:
-***************
-*** 49,59 ****
-  # work around a bug in freeglut 2.4 - only enable this if you have to use a version 
-  # of fltk before 1.1.8 AND exactly version 2.4 of freeglut
-  #  GLUT		  = -DFREEGLUT24
-!   CXXFLAGS        = $(OPTIM)  -I/usr/X11R6/include $(GLUT)
-  
-  # libraries to link with:
-!   GLDLIBS  =  -L/usr/X11R6/lib  -lGLU -lGL -lXinerama -lXft -lpthread -lm  -lXext -lX11  -lXpm \
-! 		-lfltk \
-  # -lglut # only needed with old versions of fltk before 1.1.8
-  #       -lXi -lgdkglext-x11-1.0a  # Fedora Core 2 needs these libraries
-    LINKFLTKGL  = $(libdir)libfltk.a $(libdir)libfltk_gl.a
---- 49,59 ----
-  # work around a bug in freeglut 2.4 - only enable this if you have to use a version 
-  # of fltk before 1.1.8 AND exactly version 2.4 of freeglut
-  #  GLUT		  = -DFREEGLUT24
-!   CXXFLAGS        = $(OPTIM)  $(GLUT)
-  
-  # libraries to link with:
-!   GLDLIBS  =  -lGLU -lGL -lXinerama -lXft -lpthread -lm  -lXext -lX11  -lXpm \
-! 		-lfltk -ldl -lfontconfig\
-  # -lglut # only needed with old versions of fltk before 1.1.8
-  #       -lXi -lgdkglext-x11-1.0a  # Fedora Core 2 needs these libraries
-    LINKFLTKGL  = $(libdir)libfltk.a $(libdir)libfltk_gl.a
+--- Makefile.orig	2015-12-22 13:37:43.648724586 +0100
++++ Makefile	2015-12-22 13:38:53.932055490 +0100
+@@ -56,7 +56,7 @@
+ 		-lfltk \
+ # -lglut # only needed with old versions of fltk before 1.1.8
+ #       -lXi -lgdkglext-x11-1.0a  # Fedora Core 2 needs these libraries
+-  LINKFLTKGL  = $(libdir)libfltk.a $(libdir)libfltk_gl.a
++  LINKFLTKGL  = -lfltk_gl -lfltk
+ 
+ # The extension to use for executables...
+   EXEEXT          =
