--- a/urxvtd.service
+++ b/urxvtd.service
@@ -1,8 +1,9 @@
 [Unit]
-Description=Urxvt Terminal Daemon
+Description=URxvt Daemon Service
 
 [Service]
-ExecStart=/usr/bin/urxvtd -o -q
+User=%i
+ExecStart=/usr/bin/urxvtd -q -o
 
 [Install]
-WantedBy=default.target
+WantedBy=multi-user.target
