major cleanup, fonts no longer get dumped to /usr/bin/

--- a/cubicsdr.desktop
+++ b/cubicsdr.desktop
@@ -3,8 +3,8 @@ Type=Application
 Version=1.0
 Name=CubicSDR
 Comment=Cross-Platform Software-Defined Radio Application
-Path=/usr/bin
+Path=/usr/share/cubicsdr
 Exec=cubicsdr
-Icon=cubicsdr.png 
+Icon=/usrshare/cubicsdr/CubicSDR.png 
 Terminal=false
-Categories=Sound & Video;SDR;
+Categories=Science;HamRadio;DataVisualization;
