Updated for XFreq R 2.1.65

--- a/xdm-xfreq.rc
+++ b/xdm-xfreq.rc
@@ -57,7 +57,7 @@ XDM_XFREQ_SCREENSAVER[5]=1500
 
 # XFreq
 XDM_XFREQ_GUI_PATH=xfreq-gui
-XDM_XFREQ_GUI_ARGS="-D 0 -f $XFREQFOREGROUND -b $XFREQBACKGROUND -l $XFREQFILLGFX -z $XFREQSHOWFREQ -y $XFREQSHOWCYCLES -j $XFREQSHOWIPS -J $XFREQSHOWIPC -i $XFREQSHOWCPI -r $XFREQSHOWRATIO -p $XFREQSHOWCSTATE -w $XFREQWALLBOARD -n 1 -N 1 -I 0x1000 -U 0x21 -F $XFREQFONT -g $XFREQGEOMETRY"
+XDM_XFREQ_GUI_ARGS="-S /tmp -D 0 -f $XFREQFOREGROUND -b $XFREQBACKGROUND -l $XFREQFILLGFX -z $XFREQSHOWFREQ -y $XFREQSHOWCYCLES -j $XFREQSHOWIPS -J $XFREQSHOWIPC -i $XFREQSHOWCPI -r $XFREQSHOWRATIO -p $XFREQSHOWCSTATE -w $XFREQWALLBOARD -n 1 -N 1 -I 0x1000 -U 0x21 -F $XFREQFONT -g $XFREQGEOMETRY"
 XDM_XFREQ_GUI_PID=/var/run/xdm-xfreq-gui.pid
 
 # PowerOff
