--- a/visual-studio-code-oss.desktop
+++ b/visual-studio-code-oss.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Visual Studio Code (Open Source)
-Version=0.10.9
-Exec="/opt/VSCode-OSS/Code - OSS" %F
+Version=0.10.10
+Exec="/opt/VSCode-OSS/code-oss" %F
 Icon=/opt/VSCode-OSS/resources/app/resources/linux/code.png
 Type=Application
 Categories=Development;
