fixing typo in coreos-cloudinit.service Environment directive

--- a/coreos-cloudinit.service
+++ b/coreos-cloudinit.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Cloudinit from EC2-style metadata
 [Service]
+Environment=PATH=${PATH}:/usr/bin
 Type=oneshot
 ExecStart=/usr/bin/coreos-cloudinit --oem=ec2-compat
