--- a/slade.desktop
+++ b/slade.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Encoding=UTF-8
+Type=Application
 Version=1.0
 Name=SLADE
-Type=Application
-Comment=Slayer's Leet-Ass Doom Editor
-Exec=slade
+GenericName=Doom editor
 Icon=slade
-Categories=Game;
-Terminal=False
+Exec=slade %F
+Terminal=false
+MimeType=application/x-doom-wad;application/x-pak;application/zip;inode/directory;
+Categories=GTK;Utility;Archiving;
