--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@
 !chromium-dev.install
 !chromium-dev.xml
 !chromium-dev.svg
-!enable_vaapi_on_linux-r3.diff
+!enable_vaapi_on_linux-r4.diff
 !chromium-widevine-r0.patch
-!gtk2_ui.patch
+!chromium-system-jinja-r9.patch
