--- a/makefile.patch
+++ b/makefile.patch
@@ -1,82 +1,36 @@
 --- a/Makefile	2013-03-27 23:40:48.000000000 +0200
-+++ b/Makefile	2016-03-09 19:17:50.143093636 +0200
-@@ -1,95 +1,78 @@
--#
--# Makefile
--#
--
--LIBS = -lpthread
--
++++ b/Makefile	2016-03-10 00:36:33.395861454 +0200
+@@ -4,8 +4,7 @@
+ 
+ LIBS = -lpthread
+ 
 -
 -default: fire
--
--OFILES = main.o \
--                    50move.o \
--                    all_node.o \
--                    arrays.o \
--                    benchmark.o \
--                    control.o \
--                    cut_node.o \
--                    endgame.o \
--                    evaluation.o \
--                    exclude_node.o \
--                    hash_init.o \
--                    hash_use.o \
--                    init.o \
--                    input.o \
--                    low_depth.o \
--                    magic_mult.o \
--                    make_move.o \
--                    material_value.o \
--                    mem_handler.o \
--                    mobility.o \
--                    move_gen.o \
--                    next_move.o \
--                    ok_move.o \
--                    pawn_eval.o \
--                    pv_node.o \
--                    qsearch.o \
--                    qsearch_pv.o \
--                    robbo_cache.o \
--                    robbo_comp.o \
--                    robbo_count.o \
--                    robbo_decomp.o \
--                    robbo_glue.o \
--                    robbo_init.o \
--                    robbo_init_IO.o \
--                    robbo_suffix.o \
--                    robbo_triple.o \
--                    robbo_triple_disk.o \
--                    robbo_triple_init.o \
--                    robbo_triple_value.o \
--                    robbo_utility.o \
--                    root_analysis.o \
--                    root_multipv.o \
--                    root_node.o \
--                    search.o \
--                    SEE.o \
--                    set_position.o \
--                    signals.o \
--                    slab_memory.o \
--                    SMP.o \
--                    SMP_init.o \
--                    SMP_search.o \
--                    static.o \
--                    top_analysis.o \
--                    top_node.o \
--                    unmake_move.o \
++default: firenzina
+ 
+ OFILES = main.o \
+                     50move.o \
+@@ -62,34 +61,17 @@
+                     top_analysis.o \
+                     top_node.o \
+                     unmake_move.o \
 -                    utility.o \
 -                 
 -     
--$(OFILES): 
--
++                    utility.o
++
+ $(OFILES): 
+ 
 -fire:  $(OFILES) 
 -	gcc -o fire $(OFILES)  $(LIBS) 
--
--clean:
++firenzina:  $(OFILES) 
++	gcc -o firenzina $(OFILES) $(LIBS)
+ 
+ clean:
 -	rm -f *.o  fire
--
--.c.o:   main.c
++	rm -f *.o firenzina
+ 
+ .c.o:   main.c
 -	gcc -c -g $*.c  -Wall -w -pipe  -s -std=c99 -DNDEBUG -DHAVE_STRUCT_TIMESPEC -Ofast -static  \
 -                      -flto -fwhole-program -finline-functions -fprefetch-loop-arrays  \
 -                      -Wfatal-errors -mtune=native -DHasPreFetch -DRobboBases \
@@ -96,81 +50,6 @@
 -
 -
 -
-+#
-+# Makefile
-+#
-+
-+LIBS = -lpthread
-+
-+
-+default: fire
-+
-+OFILES = main.o \
-+                    50move.o \
-+                    all_node.o \
-+                    arrays.o \
-+                    benchmark.o \
-+                    control.o \
-+                    cut_node.o \
-+                    endgame.o \
-+                    evaluation.o \
-+                    exclude_node.o \
-+                    hash_init.o \
-+                    hash_use.o \
-+                    init.o \
-+                    input.o \
-+                    low_depth.o \
-+                    magic_mult.o \
-+                    make_move.o \
-+                    material_value.o \
-+                    mem_handler.o \
-+                    mobility.o \
-+                    move_gen.o \
-+                    next_move.o \
-+                    ok_move.o \
-+                    pawn_eval.o \
-+                    pv_node.o \
-+                    qsearch.o \
-+                    qsearch_pv.o \
-+                    robbo_cache.o \
-+                    robbo_comp.o \
-+                    robbo_count.o \
-+                    robbo_decomp.o \
-+                    robbo_glue.o \
-+                    robbo_init.o \
-+                    robbo_init_IO.o \
-+                    robbo_suffix.o \
-+                    robbo_triple.o \
-+                    robbo_triple_disk.o \
-+                    robbo_triple_init.o \
-+                    robbo_triple_value.o \
-+                    robbo_utility.o \
-+                    root_analysis.o \
-+                    root_multipv.o \
-+                    root_node.o \
-+                    search.o \
-+                    SEE.o \
-+                    set_position.o \
-+                    signals.o \
-+                    slab_memory.o \
-+                    SMP.o \
-+                    SMP_init.o \
-+                    SMP_search.o \
-+                    static.o \
-+                    top_analysis.o \
-+                    top_node.o \
-+                    unmake_move.o \
-+                    utility.o
-+
-+$(OFILES): 
-+
-+fire:  $(OFILES) 
-+	gcc -o fire $(OFILES)  $(LIBS) 
-+
-+clean:
-+	rm -f *.o  fire
-+
-+.c.o:   main.c
 +	gcc -c -g $*.c -w -s -DNDEBUG -DHAVE_STRUCT_TIMESPEC -static \
 +		-march=native -O2 -pipe -fomit-frame-pointer \
 +		-Wfatal-errors -DHasPreFetch -DRobboBase
