--- a/xdman.desktop
+++ b/xdman.desktop
@@ -3,9 +3,8 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Exec=java -jar /usr/share/java/xdm/xdm.jar
+Exec=java -jar /usr/share/java/xdm/xdman.jar
 Name=Xtreme Download Manager
 Comment=Powerfull download accelarator and video downloader
 Categories=Network;
-Icon=/usr/share/pixmaps/xdm.png
-Name[pt_BR]=xdm
+Icon=/usr/share/pixmaps/xdman.png
